--- a/Chirp/public/index.html
+++ b/Chirp/public/index.html
@@ -13,7 +13,7 @@
       <nav class="navbar-fluid navbar-default navbar-fixed-top">
         <div class="container">
           <a class="navbar-brand" href="#"> Chirp! </a>
-          <p class="navbar-text"> Learn the MEAN stack by building this tiny app</p>
+          <p class="navbar-text"> Learn the MEAN Stack by building Chirp! app</p>
           <p class="navbar-right navbar-text"><a href="#/login">Login</a> or <a href="#/register">Register</a></p>
         </div>
       </nav>
