add search box and routes for search

--- a/EmployeeData/public/index.html
+++ b/EmployeeData/public/index.html
@@ -10,6 +10,7 @@
         <script src="/javascripts/controllers/employee/list.js"></script>
         <script src="/javascripts/controllers/employee/create.js"></script>
         <script src="/javascripts/controllers/employee/edit.js"></script>
+        <script src="/javascripts/controllers/employee/search.js"></script>
         <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
         <link rel='stylesheet' href='/stylesheets/style.css' />
     </head>
