--- a/EmployeeData/public/index.html
+++ b/EmployeeData/public/index.html
@@ -18,9 +18,10 @@
     <div id="main" class="container">
       <nav class="navbar-fluid navbar-default navbar-fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#">Employee APP!</a>
-					<p class="navbar-text">Employee Catalog with MEAN Stack</p>
+          <a class="navbar-brand" href="#">Employee Data Map</a>
+					<p class="navbar-text">Developed with MEAN Stack</p>
 					<p class="navbar-right navbar-text"><a href="#/employee">Employee</a></p>
+          <p class="navbar-right navbar-text"><a href="#/datamap">Data Map</a></p>
         </div>
       </nav>
       <div class="col-md-offset-2 col-md-8">
