--- a/EmployeeData/public/index.html
+++ b/EmployeeData/public/index.html
@@ -11,6 +11,7 @@
         <script src="/javascripts/controllers/employee/create.js"></script>
         <script src="/javascripts/controllers/employee/edit.js"></script>
         <script src="/javascripts/controllers/employee/search.js"></script>
+        <script src="/javascripts/controllers/datamap/generate.js"></script>
         <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
         <link rel='stylesheet' href='/stylesheets/style.css' />
     </head>
