add search criteria feature and table sorting

--- a/EmployeeData/public/index.html
+++ b/EmployeeData/public/index.html
@@ -14,6 +14,7 @@
         <script src="/javascripts/controllers/datamap/generate.js"></script>
         <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
         <link rel='stylesheet' href='/stylesheets/style.css' />
+        <link rel='stylesheet' href='/stylesheets/font-awesome.min.css' />
     </head>
    <body ng-app="employeeApp">
     <div id="main" class="container">
@@ -21,7 +22,7 @@
         <div class="container">
           <a class="navbar-brand" href="#">Employee Data Map</a>
 					<p class="navbar-text">Developed with MEAN Stack</p>
-					<p class="navbar-right navbar-text"><a href="#/employee">Employee</a></p>
+					<p class="navbar-right navbar-text"><a href="#/">Employee</a></p>
           <p class="navbar-right navbar-text"><a href="#/datamap">Data Map</a></p>
         </div>
       </nav>
